06-deploying-demo-application/api-golang/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-golang
  namespace: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-golang
  template:
    metadata:
      labels:
        app: api-golang
    spec:
      containers:
      - name: api-golang
        image: rudreshayd/getting-started:foobarbaz
        ports:
        - containerPort: 8000
          protocal: TCP
        readinessProbe:
           httpGet:
             path: /ping
             port: 8000
        resources:
          limits:
            memory: "100Mi"
          requests:
            memory: "100Mi"
            cpu: "50m"
        securityContext:
         allowPrivilegeEscalation: false
         privileged: false
      securityContext:
        seccompProfile:
        type: RuntimeDefault
