06-deploying-demo-application/api-golang/Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo-app
  name: api-golang
spec:
  selector:
    app: api-golang
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
