06-deploying-demo-application/api-golang/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Ingress
metadata:
  name: api-golang
  namespace: demo-app
  labels:
    app.kubernetes.io/name: myingress
spec:
  entryPoints:
    - web 
  routes: 
    - kind: Rule
      match: Host(`kubernetes-course.devopsdirective.com`) && PathPrefix(`/api/golang`)
      middlewares:
        - name: strip-api-prefixes
      service:
        - kind: Service 
          name: api-golang
          port: 8000
          scheme: http
